Fixing timeline scrollbar + french questions

--- a/src/features/questionnaire-components/questionnaire.css
+++ b/src/features/questionnaire-components/questionnaire.css
@@ -21,6 +21,7 @@
 
 .themed-timeline-scrollbar-sub::-webkit-scrollbar {
   width: 7px;
+  display: none;
 }
 
 .themed-timeline-scrollbar-sub::-webkit-scrollbar-track {
